Eliminate many instances of 'should', 'must', 'required' to avoid appearance of normative language (more to do!) A few more bits of whitespace tidy-up Remove versioned releases from CHANGELOG

--- a/docs/2.1. JSON Web Tokens (JWT).md
+++ b/docs/2.1. JSON Web Tokens (JWT).md
@@ -17,7 +17,7 @@ JWTs can be straightforwardly introspected using tools such as the [JWT.io debug
 
 ### Header
 
-The Header is used to identify which algorithm was used to generate the Signature. The `alg` field in the header MUST be set to RS512.
+The Header is used to identify which algorithm was used to generate the Signature. In accordance with [IS-10](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.4._Behaviour_-_Access_Tokens.html), the `alg` field in the header is set to RS512.
 
 ```json
 {
