--- a/docs/3.1. Keycloak Setup.md
+++ b/docs/3.1. Keycloak Setup.md
@@ -17,7 +17,7 @@ You can get a latest version from the [Keycloak website](https://www.keycloak.or
 
 ## Audience Config
 - Within the created client scope, go to the 'Mappers' tab. Add a mapper with a name you choose, with a type of 'Audience'. The value of this claim should match the intended value of the ['aud' claim](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.4._Behaviour_-_Access_Tokens.html#aud).
-- In order to overcome the form validation, if this includes a '*' it must be copied and pasted into the field. If you require multiple audience values (using the array format), create multiple 'Audience' type mappers with different values.
+- In order to overcome the form validation, if the value includes a '*', copy and paste it into the field. If you need multiple audience values (using the array format), create multiple 'Audience' type mappers with different values.
 
 ## Private Claims
 - [Private claims](3.2.%20NMOS%20Private%20Claims.md) are used in NMOS to control read/write access to APIs
