--- a/docs/4.4. Controller to Node Interactions (IS-05, IS-08).md
+++ b/docs/4.4. Controller to Node Interactions (IS-05, IS-08).md
@@ -2,7 +2,7 @@
 _(c) AMWA 2021, CC Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)_
 
 ## Creating an IS-05 Connection
-To create a connection between an NMOS Sender and Receiver the Controller must first query the NMOS Registry to obtain all registered NMOS Node resources.
+To create a connection between an NMOS Sender and Receiver the Controller first queries the NMOS Registry to obtain all registered NMOS Node resources.
 
 Then it can create a connection between Senders and Receivers using the [IS-05](https://specs.amwa.tv/is-05/releases/v1.1/docs/1.0._Overview.html) Connection API.
 
