--- a/docs/4.5. Event and Tally Interactions (IS-07).md
+++ b/docs/4.5. Event and Tally Interactions (IS-07).md
@@ -15,7 +15,7 @@ Host: node.example.com
 Authorization: Bearer eyJhbGciOiJSUzUxMiIsInR5cCIgOiAiSl...
 ```
 
-The Access Token must contain the read claim matching the Source path which is to be returned in the response.
+The Access Token needs to contain a read claim matching the Source path which is to be returned in the response.
 
 For example, access to the IS-07 Source ID '9f463872-9621-4939-aa3a-dc3c82d8578b' would require token claims as follows.
 
