--- a/docs/4.6. Validating Access Tokens.md
+++ b/docs/4.6. Validating Access Tokens.md
@@ -8,6 +8,6 @@ There are a number of steps that need to be considered while [validating the acc
 - Check the registered claims, such as token expiration `exp` and token audience `aud`.
 - Check the private claims, to verify whether it has permission for accessing the API.
 
-If any of these steps fail, then the associated request must be rejected.
+If any of these steps fail, then the associated request is not valid.
 
-[JWT.io](https://jwt.io/) has provided a number of third-party libraries which support the JWT validation for most of the steps described above. However, even using these libraries, the extra step for private claims validation is still required for checking the NMOS private claims.
+[JWT.io](https://jwt.io/) has provided a number of third-party libraries which support the JWT validation for most of the steps described above. However, even using these libraries, the extra step for private claims validation is still necessary for checking the NMOS private claims.
