--- a/docs/2.0. Prerequisites.md
+++ b/docs/2.0. Prerequisites.md
@@ -18,7 +18,7 @@ It's the reason you're here! This guide will detail implementation of IS-10 in N
 This document describes how to implement a general OAuth 2.0 authorization system, in line with current best practices. This document outlines additional requirements placed upon Resource Servers and Clients which implement or interact with specific NMOS Interface Specifications.
 
 ## OAuth 2.0
-Given that IS-10 is based on OAuth 2.0, a familiarity with the way OAuth 2.0 authorization works is required. The authorization flows used by IS-10 are the Client Credentials Grant and the Authentication Code Flow. The former is generally implemented by NMOS Nodes, and the latter is implemented by NMOS Controllers.
+Given that IS-10 is based on OAuth 2.0, a familiarity with the way OAuth 2.0 authorization works is needed. The authorization flows used by IS-10 are the Client Credentials Grant and the Authentication Code Flow. The former is generally implemented by NMOS Nodes, and the latter is implemented by NMOS Controllers.
 
 The following four part series of articles gives a good grounding in OAuth 2.0; the first three give an overview of OAuth 2.0 and JWT independent of implementation language. The fourth article is specific to Java implementations.
 
@@ -33,4 +33,4 @@ The following four part series of articles gives a good grounding in OAuth 2.0; 
    Case)](https://dzone.com/articles/what-is-zuul)
 
 ## JSON Web Tokens (JWT)
-JSON Web Tokens are the preferred type of token used in IS-10. A familiarity with JWT can be gained from the articles linked in the [OAuth 2.0 section](2.0.%20Prerequisites.md#oauth-20) above,  from this [introduction to JWT](https://jwt.io/introduction) and in the [next section](2.1.%20JSON%20Web%20Tokens%20(JWT).md).
+JSON Web Tokens are the preferred type of token used in IS-10. A familiarity with JWT can be gained from the articles linked in the [OAuth 2.0 section](2.0.%20Prerequisites.md#oauth-20) above, from this [introduction to JWT](https://jwt.io/introduction) and in the [next section](2.1.%20JSON%20Web%20Tokens%20(JWT).md).
