Remove this based on investigation of Keycloak config on the VPN (thanks, @simonlo-sony)

--- a/docs/3.1. Keycloak Setup.md
+++ b/docs/3.1. Keycloak Setup.md
@@ -29,7 +29,7 @@ You can get a latest version from the [Keycloak website](https://www.keycloak.or
 - In Client Scopes, click the Default Client Scopes tab. Move all of the default and optional scopes which are already on the right hand side (enabled) to the left (disabled). Then move all of the created NMOS scopes from the 'Optional Client Scopes' available list, into the 'Assigned Optional Client Scopes' list.
 
 ## Set up Trusted Hosts
-- In Realm Settings, go to Client Registration and Client Registration Policies. Under 'Anonymous Access Policies', enter 'Trusted Hosts' and add '\*.workshop.nmos.tv' (or similar). It may be necessary to disable 'Host Sending Client Registration Request Must Match', but this isn't recommended.
+- In Realm Settings, go to Client Registration and Client Registration Policies. Under 'Anonymous Access Policies', enter 'Trusted Hosts' and add '\*.workshop.nmos.tv' (or similar).
 - Go to the 'Clients' menu and edit the 'admin-cli' client. Under Client Scopes, add the newly defined scope(s) above to the 'Optional client scopes' list. This is useful to enable the debug procedure below.
 
 ## Enable TLS, Redirects and Discovery
