--- a/docs/2.0. Prerequisites.md
+++ b/docs/2.0. Prerequisites.md
@@ -4,12 +4,16 @@ _(c) AMWA 2021, CC Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)_
 Before using this guide, you should be familiar with the following specifications and technologies.
 
 ## NMOS Interface Specifications
+
 ### [IS-04 Discovery & Registration](https://specs.amwa.tv/is-04/) and [IS-05 Device Connection Management](https://specs.amwa.tv/is-05/)
-As well as a familiarity with the specifications, it is also assumed that you already have a working implementation of IS-04 and IS-05 for your NMOS Node.
+As well as a familiarity with the specifications, it is also assumed that you already have a working implementation of IS-04 and IS-05 for your NMOS appication.
+
 ### [IS-07 Event & Tally](https://specs.amwa.tv/is-07/)
 If your NMOS Node implements the Events API then it is assumed that you are familiar with the specification and have a working implementation of IS-07 for your NMOS Node.
+
 ### [IS-08 Audio Channel Mapping](https://specs.amwa.tv/is-08/)
 If your NMOS Node implements the Channel Mapping API then it is assumed that you are familiar with the specification and have a working implementation of IS-08 for your NMOS Node.
+
 ### [IS-10 Authorization](https://specs.amwa.tv/is-10/)
 It's the reason you're here! This guide will detail implementation of IS-10 in NMOS nodes and Controllers for IS-04, IS-05, IS-07 and IS-08 API calls, so some familiarity with this specification is assumed.
 
