Update 2.1. JSON Web Tokens (JWT).md

--- a/docs/2.1. JSON Web Tokens (JWT).md
+++ b/docs/2.1. JSON Web Tokens (JWT).md
@@ -3,7 +3,7 @@ _(c) AMWA 2021, CC Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)_
 
 ## Access Tokens
 
-The format of an [Access Token](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.4._Behaviour_-_Access_Tokens.html) used by IS-10 is the JSON Web Tokens (JWT). JWT is an open industry standard method for representing claims securely between services (RFC 7519). The claims in a JWT are encoded as a JSON object that is used as the payload of a JSON Web Signature (JWS) structure, enabling the claims to be digitally signed with `RSASSA-PKCS1-v1_5 using SHA-512`.
+The format of the [Access Token](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.4._Behaviour_-_Access_Tokens.html) used by IS-10 is the JSON Web Tokens (JWT). JWT is an open industry standard method for representing claims securely between services (RFC 7519). The claims in a JWT are encoded as a JSON object that is used as the payload of a JSON Web Signature (JWS) structure, enabling the claims to be digitally signed with `RSASSA-PKCS1-v1_5 using SHA-512`.
 
 The Access Token consists of three segments, each being encoded separately using [Base64url Encoding](https://en.wikipedia.org/wiki/Base64#URL_applications "Base64"), and concatenated using periods to produce the JWT:
 
