--- a/docs/2.1. JSON Web Tokens (JWT).md
+++ b/docs/2.1. JSON Web Tokens (JWT).md
@@ -36,7 +36,7 @@ The [IS-10 specification](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.4
 
 #### Private Claims
 
-IS-10 has defined some private claims, related to the NMOS scopes. These are configured in the Authorization Server and are covered in more detail in [that section](3.2.%20NMOS%20Private%20Claims.md).
+IS-10 has defined some private claims, related to the NMOS scopes. These are configured in the Authorization Server and are covered in more detail in [that section](3.0.%20Authorization%20Server%20Setup.md#private-claims).
 
 ### Signature
 
