--- a/docs/3.0. Authorization Server Setup.md
+++ b/docs/3.0. Authorization Server Setup.md
@@ -33,7 +33,7 @@ You can get a latest version from the [Keycloak website](https://www.keycloak.or
 - Repeat the previous three steps for each 'scope' supported. Note that in this limited implementation case you should use the same Claim Value for all 'x-nmos-\<api\>' claims, covering the full range of supported scopes. This is hacky, but provides a simpler proof of concept than the alternative [script provider mechanism](https://www.keycloak.org/docs/latest/server_development/#_script_providers).
 - In Client Scopes, click the Default Client Scopes tab. Move all of the default and optional scopes which are already on the right hand side (enabled) to the left (disabled). Then move all of the created NMOS scopes from the 'Optional Client Scopes' available list, into the 'Assigned Optional Client Scopes' list.
 
-### Set up Trusted Hosts
+### Set Up Trusted Hosts
 - In Realm Settings, go to Client Registration and Client Registration Policies. Under 'Anonymous Access Policies', enter 'Trusted Hosts' and add '\*.workshop.nmos.tv' (or similar).
 - Go to the 'Clients' menu and edit the 'admin-cli' client. Under Client Scopes, add the newly defined scope(s) above to the 'Optional client scopes' list. This is useful to enable the debug procedure below.
 
