Update docs/3.0. Authorization Server Setup.md

--- a/docs/3.0. Authorization Server Setup.md
+++ b/docs/3.0. Authorization Server Setup.md
@@ -4,7 +4,7 @@ _(c) AMWA 2021, CC Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)_
 IS-10 is all about authorization, so you will need an Authorization Server from which you request Access Tokens. Here you will find some detail on setting up an Authorization Server to provide the correct 'flavor' of Access Tokens to your NMOS Nodes.
 
 ## Overview
-IS-10 will work with any OAuth 2.0 and OpenID compliant Authorization Server. 
+IS-10 will work with any OAuth 2.0 or OpenID compliant Authorization Server. 
 For the purposes of this guide we have used Keycloak which is an open source Identity and Access Management solution.
 However, other Authorization Servers are available, so simply map these configuration steps to your current, favorite Auth Server.
 
