--- a/docs/1.0. Overview.md
+++ b/docs/1.0. Overview.md
@@ -7,7 +7,7 @@ This document is intended as a guide for implementers who want to add NMOS Autho
 ## Use of Normative Language
 This document is a guide to the AMWA NMOS security specifications only and not a specification itself.
 It provides informational guidance around the normative requirements of the relevant specifications but any normative language key words found in this document are not to be interpreted as RFC 2119 key words.
-If there are any inconsistencies between this guide and the specifications, please assume that it is the specification that is correct.
+If there are any inconsistencies between this guide and the specifications then, unequivocally, the specification is correct.
 
 ## Adding Authentication to API Calls
 IS-10 authorization is based on OAuth 2.0 and so adding authorization to your IS-04, IS-05, IS-07 and IS-08 API calls simply involves adding an Access Token to the HTTP header of your requests, whether that be a [Node interacting with a Registry](4.2.%20Node%20to%20Registry%20Interactions%20(IS-04).md), or a [Controller interacting with a Registry or Node](4.4.%20Controller%20to%20Node%20Interactions%20(IS-05%2C%20IS-08).md).
