--- a/docs/4.3. Controller to Authorization Server Interactions.md
+++ b/docs/4.3. Controller to Authorization Server Interactions.md
@@ -164,7 +164,7 @@ Content-Type: application/json
 ## Authorization Code Flow
 NMOS Controllers can be implemented as either OAuth 2.0 [public clients or confidential clients](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.2._Behaviour_-_Clients.html#user-agent-based--browser-based-applications). 
 
-The [NMOS IS-10 specification recommends](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.2._Behaviour_-_Clients.html#client-endpoints) making use of a Proof Key for Code Exchange (PKCE) (defined in [OAuth 2.0 RFC 7636](https://tools.ietf.org/html/rfc7636)) as part of the Authorization Code Flow.
+The [IS-10 specification recommends](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.2._Behaviour_-_Clients.html#client-endpoints) making use of a Proof Key for Code Exchange (PKCE) (defined in OAuth 2.0 [RFC 7636](https://tools.ietf.org/html/rfc7636)) as part of the Authorization Code Flow.
 
 - To start the Authorization Code Flow, in place of a Client Secret, the Controller generates a cryptographically-random
   [`code_verifier`](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.3._Behaviour_-_Token_Requests.html#authorization-request-and-response)
