Update authorization redirect response example

--- a/docs/4.3. Controller to Authorization Server Interactions.md
+++ b/docs/4.3. Controller to Authorization Server Interactions.md
@@ -197,11 +197,10 @@ Host: authorization-server.example.com
 Example of authorization code 'returned' via the redirect URI (in this example, passed in the `code` parameter):
 
 ```http
-GET /auth/callback
+HTTP/1.1 302 Found
+Location: https://controller.example.com/auth/callback
 ?state=ricgtUUXODcOzifiJDnOw25rZ8wTZCxU
 &code=2b7488e0-0682-42bb-893c-9d09e60bf8...
-HTTP/1.1
-Host: controller.example.com
 ```
 
 - The Controller can now exchange the authorization code for the bearer
