--- a/docs/4.1. Node to Authorization Server Interactions.md
+++ b/docs/4.1. Node to Authorization Server Interactions.md
@@ -227,5 +227,4 @@ Content-Type: application/json
 ]
 ```
 
-Note that if a Node is unable to contact an Authorization Server, it should attempt to contact another Authorization Server from the discovered list until this [either succeeds or the list is exhausted](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.5._Behaviour_-_Resource_Servers.html#public-keys).
-Also note that if you have multiple Authorization Servers, you will have to carefully [manage their corresponding public keys](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.5._Behaviour_-_Resource_Servers.html#public-keys).
+Note that if you have multiple Authorization Servers there are some extra things to consider about [management of their corresponding public keys](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.5._Behaviour_-_Resource_Servers.html#public-keys).
