- removed uses of the word 'should' to avoid potential confusion with normative language

--- a/docs/2.1. JSON Web Tokens (JWT).md
+++ b/docs/2.1. JSON Web Tokens (JWT).md
@@ -32,7 +32,7 @@ The Payload contains the token claims, including when the token became active, w
 
 #### Registered Claims
 
-The [IS-10 specification](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.4._Behaviour_-_Access_Tokens.html#registered-claims) gives details of how NMOS API Clients and Servers should use registered claims.
+The [IS-10 specification](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.4._Behaviour_-_Access_Tokens.html#registered-claims) gives details of how NMOS API Clients and Servers use registered claims.
 
 #### Private Claims
 
