--- a/docs/2.0. Prerequisites.md
+++ b/docs/2.0. Prerequisites.md
@@ -1,7 +1,7 @@
 # Prerequisites
 _(c) AMWA 2021, CC Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)_
 
-Before using this guide, you should be familiar with the following specifications and technologies.
+Before using this guide, you need to make yourself familiar with the following specifications and technologies.
 
 ## NMOS Interface Specifications
 
