Update docs/4.1. Node to Authorization Server Interactions.md
Refined wording around fetching of public keys

Co-authored-by: Gareth Sylvester-Bradley <31761158+garethsb-sony@users.noreply.github.com>

--- a/docs/4.1. Node to Authorization Server Interactions.md
+++ b/docs/4.1. Node to Authorization Server Interactions.md
@@ -194,7 +194,7 @@ The Bearer Token has a limited life specified by the value of the `expires_in` p
 Unlike the Authorization Code Flow, the Client Credential Flow does not issue a refresh token; 'refreshing' the token simply involves repeating the Client Credential Flow.
 
 ## Fetching Authorization Server Public Keys
-As well as acquiring a token to allow this Node to register, the Node will also need the [Authorization Server's public keys](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.5._Behaviour_-_Resource_Servers.html#public-keys) so that it can authenticate calls on its own APIs. These keys are fetched every hour to ensure the keys are always up to date.
+As well as acquiring a token to allow this Node to register, the Node also needs the [Authorization Server's public keys](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.5._Behaviour_-_Resource_Servers.html#public-keys) so that it can authenticate calls on its own APIs. These keys need to be fetched every hour to ensure the keys are always up to date.
 
 Example request to get server public keys:
 
