Update docs/4.1. Node to Authorization Server Interactions.md
Co-authored-by: Gareth Sylvester-Bradley <31761158+garethsb-sony@users.noreply.github.com>

--- a/docs/4.1. Node to Authorization Server Interactions.md
+++ b/docs/4.1. Node to Authorization Server Interactions.md
@@ -227,4 +227,4 @@ Content-Type: application/json
 ]
 ```
 
-Note that if you have multiple Authorization Servers there are some extra things to consider about [management of their corresponding public keys](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.5._Behaviour_-_Resource_Servers.html#public-keys).
+Note that since there can be multiple Authorization Servers, there are some extra things to consider about [management of their corresponding public keys](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.5._Behaviour_-_Resource_Servers.html#public-keys).
