Fix github.io link in auth server setup guide

--- a/docs/3.0. Authorization Server Setup.md
+++ b/docs/3.0. Authorization Server Setup.md
@@ -26,7 +26,7 @@ You can get a latest version from the [Keycloak website](https://www.keycloak.or
 
 ### Private Claims
 - IS-10 has [defined some private claims](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.4._Behaviour_-_Access_Tokens.html#private-claims) which are used to control read/write access to APIs.
-- Within the 'Mappers' tab, add another mapper with a name you choose, but with a type of 'Hardcoded Claim'. Give it a Claim JSON Type of 'JSON', a Claim Name of 'x-nmos-\<api\>' (where '\<api\>' is the API/scope name such as 'registration') and a Claim Value which matches the structure in [the specification](https://amwa-tv.github.io/nmos-authorization/branches/main/docs/4.4._Behaviour_-_Access_Tokens.html#example-x-nmos-api-claim).
+- Within the 'Mappers' tab, add another mapper with a name you choose, but with a type of 'Hardcoded Claim'. Give it a Claim JSON Type of 'JSON', a Claim Name of 'x-nmos-\<api\>' (where '\<api\>' is the API/scope name such as 'registration') and a Claim Value which matches the structure in [the specification](https://specs.amwa.tv/is-10/branches/v1.0-dev/docs/4.4._Behaviour_-_Access_Tokens.html#example-x-nmos--claims).
 - To overcome the validation this needs to be copied and pasted into the field.
 
 ### Repeat for All Scopes
