Fix minor error in CLI for keytool

--- a/docs/3.0. Authorization Server Setup.md
+++ b/docs/3.0. Authorization Server Setup.md
@@ -39,7 +39,7 @@ You can get a latest version from the [Keycloak website](https://www.keycloak.or
 - Next, ensure that Keycloak trusts the certificate authority which is in use. This can be achieved by following [Keycloak's instructions](https://www.keycloak.org/docs/6.0/server_installation/#_truststore), or by adding the certificate to the default Java keystore using a command like the following, before restarting Keycloak.
 
 ```
-keytool -import -alias nmosca -file cert.pem -keystore cacerts -storepass changeit
+keytool -import -alias nmosca -file cert.pem -cacerts -storepass changeit
 ```
 
 ### Enable TLS, Redirects and Discovery
