--- a/docs/3.0. Authorization Server Setup.md
+++ b/docs/3.0. Authorization Server Setup.md
@@ -38,6 +38,9 @@ You can get a latest version from the [Keycloak website](https://www.keycloak.or
 - Go to the 'Clients' menu and edit the 'admin-cli' client. Under Client Scopes, add the newly defined scope(s) above to the 'Optional client scopes' list. This is useful to enable the debug procedure below.
 - Next, ensure that Keycloak trusts the certificate authority which is in use. This can be achieved by following [Keycloak's instructions](https://www.keycloak.org/docs/latest/server_installation/#_truststore), or by adding the certificate to the default Java keystore using a command like the following, before restarting Keycloak.
 
+```
+keytool -import -alias nmosca -file cert.pem -cacerts -storepass changeit
+```
 
 ### Enable TLS, Redirects and Discovery
 - In order to enable Keycloak for TLS (HTTPS) we would suggest using a Reverse Proxy such as the Apache web server.
