Added living document text to overview

--- a/docs/1.0. Overview.md
+++ b/docs/1.0. Overview.md
@@ -4,6 +4,8 @@ _(c) AMWA 2021, CC Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)_
 ## Scope
 This document is intended as a guide for implementers who want to add security to their NMOS Nodes and Controllers.
 
+Following feedback from implementers, the focus of this document is currently on implementing NMOS Nodes, Servers and Controllers with support for IS-10 and BCP-003-02. However, this is a living document and guidance on the use of other NMOS security specifications will be added as necessary.
+
 ## Use of Normative Language
 This document is a guide to the AMWA NMOS security specifications only and not a specification itself.
 It provides informational guidance around the normative requirements of the relevant specifications.
