Rename 4.4. to match actual title. Fix title of 4.5. Fix copy&paste errors in image alt text/titles.

--- a/docs/1.0. Overview.md
+++ b/docs/1.0. Overview.md
@@ -13,7 +13,7 @@ If there are any inconsistencies between this guide and the specifications then,
 Any normative language key words found in this document are not to be interpreted as RFC 2119 key words.
 
 ## Adding Authentication to API Calls
-[IS-10](https://specs.amwa.tv/is-10/) authorization is based on OAuth 2.0 and so adding authorization to your IS-04, IS-05, IS-07 and IS-08 API calls simply involves adding an Access Token to the HTTP header of your requests, whether that be a [Node interacting with a Registry](4.2.%20Node%20to%20Registry%20Interactions%20(IS-04).md), or a [Controller interacting with a Registry or Node](4.4.%20Controller%20to%20Node%20Interactions%20(IS-05%2C%20IS-08).md).
+[IS-10](https://specs.amwa.tv/is-10/) authorization is based on OAuth 2.0 and so adding authorization to your IS-04, IS-05, IS-07 and IS-08 API calls simply involves adding an Access Token to the HTTP header of your requests, whether that be a [Node interacting with a Registry](4.2.%20Node%20to%20Registry%20Interactions%20(IS-04).md), or a [Controller interacting with a Registry or Node](4.4.%20Controller%20to%20Registry%20(IS-04)%20and%20Node%20Interactions%20(IS-05%2C%20IS-08).md).
 Additional requirements that are specific to particular APIs are defined by [BCP-003-02](https://specs.amwa.tv/bcp-003-02/).
 
 ## Getting an Access Token
