--- a/docs/4.1. Node to Authorization Server Interactions.md
+++ b/docs/4.1. Node to Authorization Server Interactions.md
@@ -9,7 +9,7 @@ This section details the interactions between an NMOS Node and the Authorization
 - **Refreshing Bearer Tokens**: Ensuring the token is always valid
 - **Fetching Authorization Server Public Keys**: To authenticate Access Tokens in incoming API calls.
 
-![Node to Authorization Interactions](../docs/images/client_credentials_flow.png)
+![Node to Authorization Server Interactions](../docs/images/client_credentials_flow.png)
 
 The sequence diagram above gives an overview of these interactions which are described in more detail below.
 
