--- a/docs/4.3. Controller to Authorization Server Interactions.md
+++ b/docs/4.3. Controller to Authorization Server Interactions.md
@@ -8,7 +8,7 @@ This section details the interactions between an NMOS Controller and the Authori
 - **Authentication Code Flow**: Request of an Access Token from the Authorization Server.
 - **Refreshing Bearer Tokens**: Ensuring the token is always valid.
 
-![Node to Authorization Interactions](../docs/images/authorization_flow.png)
+![Controller to Authorization Server Interactions](../docs/images/authorization_flow.png)
 
 The sequence diagram above gives an overview of these interactions which are described in more detail below.
 
