--- a/docs/4.5. Event and Tally Interactions (IS-07).md
+++ b/docs/4.5. Event and Tally Interactions (IS-07).md
@@ -1,9 +1,9 @@
-# Event & Tally (IS-07)
+# Event & Tally Interactions (IS-07)
 _(c) AMWA 2021, CC Attribution-NoDerivatives 4.0 International (CC BY-ND 4.0)_
 
 IS-10 adds security to the traditional Event and Tally HTTP requests.
 
-![Node to Authorization Interactions](../docs/images/event_tally.png)
+![Event and Tally Interactions](../docs/images/event_tally.png)
 
 ## IS-07 Events API
 
