--- a/docs/4.0. Implementing Authenticated API Calls.md
+++ b/docs/4.0. Implementing Authenticated API Calls.md
@@ -18,7 +18,7 @@ This section covers:
 - Registering your Controller as a Client of the Authorization Server
 - Obtaining Access Tokens for authenticated API calls
 
-### [Controller to Registry (IS-04) and Node Interactions (IS-05, IS-08)](4.4.%20Controller%20to%20Node%20Interactions%20(IS-05%2C%20IS-08).md)
+### [Controller to Registry (IS-04) and Node Interactions (IS-05, IS-08)](4.4.%20Controller%20to%20Registry%20(IS-04)%20and%20Node%20Interactions%20(IS-05%2C%20IS-08).md)
 This section covers:
 - Authenticated querying of the Registry
 - Authenticated connection management
