--- a/docs/4.4. Controller to Registry (IS-04) and Node Interactions (IS-05, IS-08).md
+++ b/docs/4.4. Controller to Registry (IS-04) and Node Interactions (IS-05, IS-08).md
@@ -9,7 +9,7 @@ Then it can create a connection between Senders and Receivers using the [IS-05](
 ### Querying the NMOS Registry
 The Controller uses the [IS-04](https://specs.amwa.tv/is-04/releases/v1.3/docs/1.0._Overview.html) Query API to obtain a list of all registered NMOS Node resources from the NMOS Registry. This API call includes a valid Access Token in the HTTP header.
 
-![Controller to Registry](../docs/images/controller_to_registry.png)
+![Controller to Registry Interactions](../docs/images/controller_to_registry.png)
 
 Example query request including the Access Token (`Authorization: Bearer`) in the HTTP header:
 
@@ -70,7 +70,7 @@ Content-Type: application/json
 Once the Controller has obtained the NMOS resource list, it can use the [IS-05](https://specs.amwa.tv/is-05/releases/v1.1/docs/1.0._Overview.html) Connection API to request the Sender's SDP and make connections between Receivers and Senders.
 
 #### SDP Request
-![Controller to Registry](../docs/images/controller_to_nodes.png)
+![Controller to Node Interactions](../docs/images/controller_to_nodes.png)
 
 Example Sender SDP request including the Access Token (`Authorization: Bearer`) in the HTTP header:
 
