Made the use of ellipses in JSON examples consistent with use in other specifications (e.g. IS-08)

--- a/docs/4.4. Controller to Node Interactions (IS-05, IS-08).md
+++ b/docs/4.4. Controller to Node Interactions (IS-05, IS-08).md
@@ -38,28 +38,28 @@ Content-Type: application/json
         }
       ],
       "versions": [
-        "..."
+        ... etc. ...
       ]
     },
     "caps": {
-      "...": "caps data here"
+      ... etc. ...
     },
     "clocks": [
-      "..."
+      ... etc. ...
     ],
     "description": "...",
     "hostname": "node.example.com",
     "href": "https://node.example.com/",
     "id": "...",
     "interfaces": [
-      "..."
+      ... etc. ...
     ],
     "label": "My Example Node",
     "services": [
-      "..."
+      ... etc. ...
     ],
     "tags": {
-      "...": "tags data here"
+      ... etc. ...
     },
     "version": "..."
   }
@@ -127,7 +127,7 @@ Authorization: Bearer eyJhbGciOiJSUzUxMiIsInR5cCIgOiAiSl...
   "master_enable": true,
   "sender_id": "8d26d68a-93f2-55ff-9495-acbb576897fd",
   "transport_file": {
-    "...": "transport_file data here"
+    ... etc. ...
   }
 }
 ```
@@ -148,10 +148,10 @@ Content-Type: application/json
   "master_enable": true,
   "sender_id": "8d26d68a-93f2-55ff-9495-acbb576897fd",
   "transport_file": {
-    "...": "transport_file data here"
+    ... etc. ...
   },
   "transport_params": [
-    "..."
+    ... etc. ...
   ]
 }
 ```
@@ -173,7 +173,7 @@ Authorization: Bearer eyJhbGciOiJSUzUxMiIsInR5cCIgOiAiSl...
     "mode": "activate_immediate"
   },
   "action" : {
-    "...": "action data here"
+    ... etc. ...
   }
 }
 ```
@@ -192,7 +192,7 @@ Content-Type: application/json
     "requested_time": null
   },
   "action" : {
-    "...": "action data here"
+    ... etc. ...
   }
 }
 ```
