--- a/docs/4.2. Node to Registry Interactions (IS-04).md
+++ b/docs/4.2. Node to Registry Interactions (IS-04).md
@@ -17,7 +17,7 @@ Authorization: Bearer eyJhbGciOiJSUzUxMiIsInR5cCIgOiAiSl...
 ```json
 {
   "data": {
-    "...": "data here"
+    ... etc. ...
   },
   "type": "node"
 }
@@ -31,6 +31,6 @@ Content-Type: application/json
 ```
 ```json
 {
-  "...": "data here"
+  ... etc. ...
 }
 ```
