IS-10 links changed from v1.0-dev to v1.0.x. [WIP] removed.

--- a/docs/4.5. Event and Tally Interactions (IS-07).md
+++ b/docs/4.5. Event and Tally Interactions (IS-07).md
@@ -40,7 +40,7 @@ The WebSocket URI for an IS-07 NMOS Device exposed in the `connection_uri` param
 * including the Access Token (`Authorization: Bearer`) in the HTTP header of the request that initiates the WebSocket handshake
 * passing the Access Token as a query parameter (`wss://hostname/x-nmos/events/v1.0/devices/58f6b536-ca4c-43fd-880a-9df2501fc125?access_token=eyJhbGciOiJSUzUxMiIsInR5cCIgOiAiSl...`) - only for situations in which it is not feasible to pass the token in the HTTP Authorization Header.
 
-Further details on WebSocket authorization can be found in [BCP-003-02](https://specs.amwa.tv/bcp-003-02/branches/v1.0-dev/docs/1.0._Authorization_Practice.html#is-07---event-and-tally).
+Further details on WebSocket authorization can be found in [BCP-003-02](https://specs.amwa.tv/bcp-003-02/branches/v1.0.x/docs/1.0._Authorization_Practice.html#is-07---event-and-tally).
 
 ## IS-07 MQTT Events
 
